--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="editar">Editar</string>
     <string name="eliminar">Eliminar</string>
     <string name="anadir">Añadir</string>
+    <string name="escoge_fecha">escoge fecha</string>
+    <string name="escoge_hora">escoge hora</string>
 </resources>
