reforma de bbdd y creacion de GestionCategorias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="anadir">Añadir</string>
     <string name="escoge_fecha">escoge fecha</string>
     <string name="escoge_hora">escoge hora</string>
+    <string name="nombre">Nombre</string>
 </resources>
