antes de cambiar fecha y hora

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="categorias">Categorías</string>
     <string name="eliminar_recordatorio">Eliminar recordatorio</string>
     <string name="importante">Importante</string>
+    <string name="poner_recordatorio">Poner recordatorio</string>
 </resources>
